fixed ipad layout bug

--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -11,7 +11,7 @@ $background-opacity: 0.7;
 @mixin background {
   @if $show-home-image {
     &#bg-img {
-      background: $home-image;
+      background: $home-image no-repeat center center fixed;
       background-attachment: fixed;
       background-size: cover;
 
@@ -19,7 +19,7 @@ $background-opacity: 0.7;
         content: "";
         position: absolute;
         top: 0;
-        right: 0;
+        left: 0;
         width: 100%;
         height: 100%;
         z-index: -1;
