--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,7 +8,7 @@
 body {
   @include background;
   background: darken($primary-color, 5);
-  height: 100%;
+  min-height: 100%;
   margin: 0;
   color: set-text-color($primary-color);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -50,7 +50,12 @@ header {
 
 main {
   padding: 2rem 4rem;
-  min-height: calc(100vh - 60px);
+
+  &#about,
+  &#contact,
+  &#work {
+    min-height: calc(100vh - 60px);
+  }
 
   .icons {
     margin-top: 1rem;
@@ -66,7 +71,6 @@ main {
   }
 
   &#home {
-    min-height: 100vh;
     overflow: hidden;
     h1 {
       margin-top: 28vh;
@@ -83,7 +87,7 @@ main {
       justify-content: center;
 
       .bio-image-container {
-        padding: 0.5rem 2rem;;
+        padding: 0.5rem 2rem;
         margin: auto;
 
         .bio-image {
@@ -119,18 +123,19 @@ main {
         border-bottom: $secondary-color 5px solid;
         margin-bottom: 0.5rem;
 
-        h4, p {
+        h4,
+        p {
           margin: 0.5rem 0;
         }
       }
     }
-    
   }
+
   &#work {
     max-width: 1100px;
     margin: 0 auto;
 
-    .projects{
+    .projects {
       display: flex;
       flex-flow: row nowrap;
       margin-bottom: 1rem;
@@ -138,6 +143,8 @@ main {
   }
 
   &#contact {
+    max-width: 1100px;
+    margin: 0 auto;
 
     .boxes {
       display: flex;
